[package]
name = "namuPPuli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.1"
dashmap = "5.4.0"
num_cpus = "1.13.1"
petgraph = "0.6.2"
regex = "1.6.0"
clap = { version = "4.0.2", features = ["derive"] }
csv = "1.1.6"
linecount = "0.1.0"
gephi = {path = "gephi"}
tokio = { version = "1.21.2", features = ["full"] }
async-recursion = "1.0.0"